* IR device support (#3)
