# gateway/swagger/tuya-gateway.yaml
@@ -1,7 +1,7 @@
 swagger: '2.0'
 info:
   title: Tuya Gateway
-  version: "0.1"
+  version: "1.3"
   description: test
 consumes:
   - application/json
@@ -60,6 +60,56 @@ paths:
             properties:
               functions:
                 type: object
+  /ir/remotes:
+    get:
+      tags: [ IR ]
+      operationId: nanotuya.api.get_ir_device_remotes
+      summary: Get the list of remotes bound to IR control
+      parameters:
+        - $ref: '#/parameters/device_id'
+      responses:
+        200:
+          description: Return bound remotes
+          schema:
+            type: object
+            properties:
+              functions:
+                type: object
+  /ir/keys:
+    get:
+      tags: [ IR ]
+      operationId: nanotuya.api.get_ir_remote_keys
+      summary: Get the list of keys bound to the remote of the IR device
+      parameters:
+        - $ref: '#/parameters/device_id'
+        - $ref: '#/parameters/remote_id'
+      responses:
+        200:
+          description: Return keys bound to remote
+          schema:
+            type: object
+            properties:
+              functions:
+                type: object
+    post:
+      tags: [ IR ]
+      operationId: nanotuya.api.post_ir_remote_key
+      summary: Send native or custom (learned) command to IR remote
+      parameters:
+        - $ref: '#/parameters/device_id'
+        - $ref: '#/parameters/remote_id'
+        - name: payload
+          in: body
+          schema:
+            $ref: '#/definitions/payload'
+      responses:
+        200:
+          description: Post IR key
+          schema:
+            type: object
+            properties:
+              functions:
+                type: object
 parameters:
   device_id:
     name: device_id
@@ -68,7 +118,13 @@ parameters:
     type: string
     required: true
     pattern: "^[a-zA-Z0-9-]+$"
-
+  remote_id:
+    name: remote_id
+    description: Tuya IR remote unique identifier
+    in: query
+    type: string
+    required: true
+    pattern: "^[a-zA-Z0-9-]+$"
 
 definitions:
   payload:
